--- a/schema/codegen-schema/calendar/notification.canonical.yaml
+++ b/schema/codegen-schema/calendar/notification.canonical.yaml
@@ -1,15 +1,16 @@
-id: canonical://www.boundedinfinity.com/canonical/calendar/notification
-description: Calendar Notification
-kind: object
-properties:
-    -   name: before
-        kind: ref
-        ref: canonical://www.boundedinfinity.com/canonical/time/duration
-        required: true
-    -   name: method
-        kind: string
-        enum:
-            - default
-            - email
-            - text
-            - all
+kinds:
+    -   id: canonical://www.boundedinfinity.com/canonical/calendar/notification
+        description: Calendar Notification
+        kind: object
+        properties:
+            -   name: before
+                kind: ref
+                ref: canonical://www.boundedinfinity.com/canonical/time/duration
+                required: true
+            -   name: method
+                kind: string
+                enum:
+                    - default
+                    - email
+                    - text
+                    - all
