--- a/schema/codegen-schema/math/number.canonical.yaml
+++ b/schema/codegen-schema/math/number.canonical.yaml
@@ -1,4 +1,4 @@
-types:
+kinds:
     -   id: https://www.boundedinfinity.com/canonical/math/number/fraction
         name: fraction
         type: object
