--- a/schema/codegen-schema/time/duration.canonical.yaml
+++ b/schema/codegen-schema/time/duration.canonical.yaml
@@ -1,4 +1,5 @@
-id: canonical://www.boundedinfinity.com/canonical/time/duration
-description: Duration
-kind: string
-format: duration
+kinds:
+    -   id: canonical://www.boundedinfinity.com/canonical/time/duration
+        description: Duration
+        kind: string
+        format: duration
