--- a/schema/codegen-schema/auth/password.canonical.yaml
+++ b/schema/codegen-schema/auth/password.canonical.yaml
@@ -1,40 +1,38 @@
-defs:
-    password-requirement-body: &password-requirement-body
-        -   type: https://www.boundedinfinity.com/canonical/id
-        -   type: string
-            name: name
-            description: Descriptive name for the password requirements
-            min: 1
-            max: 25
-        -   name: length
-            type: integer
-            description: The password length.
-            default: 12
-            min: 6
-            max: 50
-            required: true
-        -   name: letter-count
-            type: integer
-            description: The number of letter characters. 
-            min: 0
-        -   name: lowercase-count
-            type: integer
-            description: The number of lower case characters.
-            min: 0
-        -   name: uppercase-count
-            type: integer
-            description: The number of upper case characters.
-            min: 0
-        -   name: number-count
-            description: The number of number characters.
-            type: integer
-            min: 0
-        -   name: symbol-count
-            description: The number of symbol characters.
-            type: integer
-            min: 0
-
 kinds:
+    -   password-requirement-body: &password-requirement-body
+            -   type: https://www.boundedinfinity.com/canonical/id
+            -   type: string
+                name: name
+                description: Descriptive name for the password requirements
+                min: 1
+                max: 25
+            -   name: length
+                type: integer
+                description: The password length.
+                default: 12
+                min: 6
+                max: 50
+                required: true
+            -   name: letter-count
+                type: integer
+                description: The number of letter characters. 
+                min: 0
+            -   name: lowercase-count
+                type: integer
+                description: The number of lower case characters.
+                min: 0
+            -   name: uppercase-count
+                type: integer
+                description: The number of upper case characters.
+                min: 0
+            -   name: number-count
+                description: The number of number characters.
+                type: integer
+                min: 0
+            -   name: symbol-count
+                description: The number of symbol characters.
+                type: integer
+                min: 0
     # ==========================================================================================
     #  Password Requirements
     # ==========================================================================================
