--- a/schema/codegen-schema/banking/card.canonical.yaml
+++ b/schema/codegen-schema/banking/card.canonical.yaml
@@ -1,31 +1,32 @@
-id: canonical://www.boundedinfinity.com/canonical/banking/card
-description: Bank
-kind: object
-properties:
-    -   name: name
-        kind: ref
-        ref: canonical://www.boundedinfinity.com/canonical/people/name
-        required: true
-    -   name: description
-        description: The description of the account
-        kind: string
-    -   name: number
-        kind: string
-        min: 16
-        max: 16
-        required: true
-    -   name: pin
-        kind: string
-        min: 4
-        max: 10
-    -   name: kind
-        kind: ref
-        ref: canonical://www.boundedinfinity.com/canonical/banking/card-type
-    -   name: account
-        kind: ref
-        ref: canonical://www.boundedinfinity.com/canonical/banking/account
-    -   name: dates
-        kind: array
-        items:
-            kind: ref
-            ref: canonical://www.boundedinfinity.com/canonical/label/labeled-date
+kinds:
+    -   id: canonical://www.boundedinfinity.com/canonical/banking/card
+        description: Bank
+        kind: object
+        properties:
+            -   name: name
+                kind: ref
+                ref: canonical://www.boundedinfinity.com/canonical/people/name
+                required: true
+            -   name: description
+                description: The description of the account
+                kind: string
+            -   name: number
+                kind: string
+                min: 16
+                max: 16
+                required: true
+            -   name: pin
+                kind: string
+                min: 4
+                max: 10
+            -   name: kind
+                kind: ref
+                ref: canonical://www.boundedinfinity.com/canonical/banking/card-type
+            -   name: account
+                kind: ref
+                ref: canonical://www.boundedinfinity.com/canonical/banking/account
+            -   name: dates
+                kind: array
+                items:
+                    kind: ref
+                    ref: canonical://www.boundedinfinity.com/canonical/label/labeled-date
