--- a/schema/codegen-schema/banking/iban.canonical.yaml
+++ b/schema/codegen-schema/banking/iban.canonical.yaml
@@ -1,13 +1,14 @@
-id: canonical://www.boundedinfinity.com/canonical/banking/iban
-description: |
-    <p>
-        The Business Identifier Codes (BIC) formatted number.
-    </p>
-    <p>
-        <p>References:</p>
-        <ul>
-            <li>canonical://en.wikipedia.org/wiki/ISO_9362</li>
-            <li>canonical://www.theswiftcodes.com/</li>
-        </ul>
-    </p>
-kind: string
+kinds:
+    -   id: canonical://www.boundedinfinity.com/canonical/banking/iban
+        description: |
+            <p>
+                The Business Identifier Codes (BIC) formatted number.
+            </p>
+            <p>
+                <p>References:</p>
+                <ul>
+                    <li>canonical://en.wikipedia.org/wiki/ISO_9362</li>
+                    <li>canonical://www.theswiftcodes.com/</li>
+                </ul>
+            </p>
+        kind: string
