--- a/schema/codegen-schema/bookkeeping/account-type.canonical.yaml
+++ b/schema/codegen-schema/bookkeeping/account-type.canonical.yaml
@@ -1,6 +1,7 @@
-id: canonical://www.boundedinfinity.com/canonical/bookkeeping/account-type
-description: Double Entry Book Keeping Account Types
-kind: string
-enum:
-    -   Owns
-    -   Owes
+kinds:
+    -   id: canonical://www.boundedinfinity.com/canonical/bookkeeping/account-type
+        description: Double Entry Book Keeping Account Types
+        kind: string
+        enum:
+            -   Owns
+            -   Owes
