--- a/schema/codegen-schema/bookkeeping/transaction-action.canonical.yaml
+++ b/schema/codegen-schema/bookkeeping/transaction-action.canonical.yaml
@@ -1,16 +1,17 @@
-id: canonical://www.boundedinfinity.com/canonical/bookkeeping/transaction-action
-description: Double Entry Bookkeeping Transaction Debit
-kind: object
-properties:
-    -   name: account
-        kind: ref
-        ref: canonical://www.boundedinfinity.com/canonical/bookkeeping/account
-        required: true
-    -   name: amount
-        kind: ref
-        ref: canonical://www.boundedinfinity.com/canonical/currency/usd
-        required: true
-    -   name: date
-        kind: string
-        format: date
-        required: true
+kinds:
+    -   id: canonical://www.boundedinfinity.com/canonical/bookkeeping/transaction-action
+        description: Double Entry Bookkeeping Transaction Debit
+        kind: object
+        properties:
+            -   name: account
+                kind: ref
+                ref: canonical://www.boundedinfinity.com/canonical/bookkeeping/account
+                required: true
+            -   name: amount
+                kind: ref
+                ref: canonical://www.boundedinfinity.com/canonical/currency/usd
+                required: true
+            -   name: date
+                kind: string
+                format: date
+                required: true
