--- a/schema/codegen-schema/corporation/company.canonical.yaml
+++ b/schema/codegen-schema/corporation/company.canonical.yaml
@@ -1,35 +1,36 @@
-id: canonical://www.boundedinfinity.com/canonical/corporation/company
-description: A company record
-kind: object
-properties:
-    -   name: name
-        description: Name of company
-        kind: string
-        max: 200
-        required: true
-    -   name: image
-        description: Link to image of company
-        kind: string
-        max: 1000
-    -   name: addresses
-        description: List of addresses
-        kind: array
-        items:
-            kind: ref
-            ref: canonical://www.boundedinfinity.com/canonical/address/mailing
-    -   name: telephone-numbers
-        description: Telephone numbers
-        kind: array
-        items:
-            kind: ref
-            ref: canonical://www.boundedinfinity.com/canonical/telephone/nanp
-    -   name: dates
-        kind: array
-        items:
-            kind: ref
-            ref: canonical://www.boundedinfinity.com/canonical/time/sdate
-    -   name: labels
-        kind: array
-        items:
-            kind: ref
-            ref: canonical://www.boundedinfinity.com/canonical/label/label
+kinds:
+    -   id: canonical://www.boundedinfinity.com/canonical/corporation/company
+        description: A company record
+        kind: object
+        properties:
+            -   name: name
+                description: Name of company
+                kind: string
+                max: 200
+                required: true
+            -   name: image
+                description: Link to image of company
+                kind: string
+                max: 1000
+            -   name: addresses
+                description: List of addresses
+                kind: array
+                items:
+                    kind: ref
+                    ref: canonical://www.boundedinfinity.com/canonical/address/mailing
+            -   name: telephone-numbers
+                description: Telephone numbers
+                kind: array
+                items:
+                    kind: ref
+                    ref: canonical://www.boundedinfinity.com/canonical/telephone/nanp
+            -   name: dates
+                kind: array
+                items:
+                    kind: ref
+                    ref: canonical://www.boundedinfinity.com/canonical/time/sdate
+            -   name: labels
+                kind: array
+                items:
+                    kind: ref
+                    ref: canonical://www.boundedinfinity.com/canonical/label/label
