--- a/schema/codegen-schema/currency/usd.canonical.yaml
+++ b/schema/codegen-schema/currency/usd.canonical.yaml
@@ -1,4 +1,5 @@
-id: canonical://www.boundedinfinity.com/canonical/currency/usd
-description: US dollar
-kind: number
-minimum: 0
+kinds:
+    -   id: canonical://www.boundedinfinity.com/canonical/currency/usd
+        description: US dollar
+        kind: number
+        minimum: 0
