--- a/schema/codegen-schema/film/person.canonical.yaml
+++ b/schema/codegen-schema/film/person.canonical.yaml
@@ -1,14 +1,15 @@
-id: canonical://www.boundedinfinity.com/canonical/film/person
-description: A movie record
-kind: object
-properties:
-    -   name: title
-        kind: string
-    -   name: person
-        kind: array
-        items:
-            kinds: canonical://www.boundedinfinity.com/canonical/people/person
-    -   name: dates
-        kind: array
-        items:
-            kinds: canonical://www.boundedinfinity.com/canonical/time/sdate
+kinds:
+    -   id: canonical://www.boundedinfinity.com/canonical/film/person
+        description: A movie record
+        kind: object
+        properties:
+            -   name: title
+                kind: string
+            -   name: person
+                kind: array
+                items:
+                    kinds: canonical://www.boundedinfinity.com/canonical/people/person
+            -   name: dates
+                kind: array
+                items:
+                    kinds: canonical://www.boundedinfinity.com/canonical/time/sdate
