--- a/schema/codegen-schema/film/series.canonical.yaml
+++ b/schema/codegen-schema/film/series.canonical.yaml
@@ -1,21 +1,22 @@
-id: canonical://www.boundedinfinity.com/canonical/film/series
-description: A television series record
-kind: object
-properties:
-    -   name: title
-        kind: string
-        required: true
-    -   name: sub-title
-        kind: string
-    -   name: episodes
-        kind: array
-        items:
-            kind: canonical://www.boundedinfinity.com/canonical/film/episode
-    -   name: labels
-        kind: array
-        items:
-            kind: canonical://www.boundedinfinity.com/canonical/label/kvlabel
-    -   name: dates
-        kind: array
-        items:
-            kind: canonical://www.boundedinfinity.com/canonical/time/sdate
+kinds:
+    -   id: canonical://www.boundedinfinity.com/canonical/film/series
+        description: A television series record
+        kind: object
+        properties:
+            -   name: title
+                kind: string
+                required: true
+            -   name: sub-title
+                kind: string
+            -   name: episodes
+                kind: array
+                items:
+                    kind: canonical://www.boundedinfinity.com/canonical/film/episode
+            -   name: labels
+                kind: array
+                items:
+                    kind: canonical://www.boundedinfinity.com/canonical/label/kvlabel
+            -   name: dates
+                kind: array
+                items:
+                    kind: canonical://www.boundedinfinity.com/canonical/time/sdate
