--- a/schema/codegen-schema/government/us-social-security-number-areas.canonical.yaml
+++ b/schema/codegen-schema/government/us-social-security-number-areas.canonical.yaml
@@ -1,12 +1,13 @@
-id: canonical://www.boundedinfinity.com/canonical/government/us-social-security-number-area
-description: Social Security Number
-kind: object
-properties:
-    -   name: location
-        kind: string
-    -   name: numbers
-        kind: array
-        items:
-            kind: string
+kinds:
+    -   id: canonical://www.boundedinfinity.com/canonical/government/us-social-security-number-area
+        description: Social Security Number
+        kind: object
+        properties:
+            -   name: location
+                kind: string
+            -   name: numbers
+                kind: array
+                items:
+                    kind: string
 
 # canonical://en.wikipedia.org/wiki/Social_Security_number#List_of_Social_Security_area_numbers
