--- a/schema/codegen-schema/physical-inventory/vendor.canonical.yaml
+++ b/schema/codegen-schema/physical-inventory/vendor.canonical.yaml
@@ -1,22 +1,23 @@
-id: canonical://www.boundedinfinity.com/canonical/physical-inventory/item
-description: A vendor
-kind: object
-properties:
-    -   name: title
-        kind: string
-        description: The vendor title
-        max: 200
-    -   name: description
-        kind: string
-        description: The vendor description
-        max: 2000
-    -   name: bookmarks
-        kind: array
-        items:
-            kind: ref
-            ref: canonical://www.boundedinfinity.com/canonical/util/bookmark
-    -   name: labels
-        kind: array
-        items:
-            kind: ref
-            ref: canonical://www.boundedinfinity.com/canonical/label/label
+kinds:
+    -   id: canonical://www.boundedinfinity.com/canonical/physical-inventory/item
+        description: A vendor
+        kind: object
+        properties:
+            -   name: title
+                kind: string
+                description: The vendor title
+                max: 200
+            -   name: description
+                kind: string
+                description: The vendor description
+                max: 2000
+            -   name: bookmarks
+                kind: array
+                items:
+                    kind: ref
+                    ref: canonical://www.boundedinfinity.com/canonical/util/bookmark
+            -   name: labels
+                kind: array
+                items:
+                    kind: ref
+                    ref: canonical://www.boundedinfinity.com/canonical/label/label
