--- a/schema/codegen-schema/prescriptions/prescriptions.canonical.yaml
+++ b/schema/codegen-schema/prescriptions/prescriptions.canonical.yaml
@@ -1,4 +1,4 @@
-types:
+kinds:
     -   id: https://www.boundedinfinity.com/canonical/prescriptions/prescription
         name: id
         type: object
