--- a/schema/codegen-schema/time/date.canonical.yaml
+++ b/schema/codegen-schema/time/date.canonical.yaml
@@ -1,4 +1,5 @@
-id: canonical://www.boundedinfinity.com/canonical/time/date
-description: Date
-kind: string
-format: date
+kinds:
+    -   id: canonical://www.boundedinfinity.com/canonical/time/date
+        description: Date
+        kind: string
+        format: date
