--- a/schema/codegen-schema/time/datetime.canonical.yaml
+++ b/schema/codegen-schema/time/datetime.canonical.yaml
@@ -1,4 +1,5 @@
-id: canonical://www.boundedinfinity.com/canonical/time/datetime
-description: Timestamp
-kind: string
-format: date-time
+kinds:
+    -   id: canonical://www.boundedinfinity.com/canonical/time/datetime
+        description: Timestamp
+        kind: string
+        format: date-time
