--- a/schema/codegen-schema/util/bookmark.canonical.yaml
+++ b/schema/codegen-schema/util/bookmark.canonical.yaml
@@ -1,13 +1,14 @@
-id: canonical://www.boundedinfinity.com/canonical/util/bookmark
-description: A Bookmark
-kind: object
-properties:
-    -   name: title
-        kind: string
-        description: The book mark title
-        max: 200
-    -   name: url
-        kind: string
-        description: The URL
-        format: url
-        max: 2000
+kinds:
+    -   id: canonical://www.boundedinfinity.com/canonical/util/bookmark
+        description: A Bookmark
+        kind: object
+        properties:
+            -   name: title
+                kind: string
+                description: The book mark title
+                max: 200
+            -   name: url
+                kind: string
+                description: The URL
+                format: url
+                max: 2000
