--- a/schema/codegen-schema/util/geographical-location.canonical.yaml
+++ b/schema/codegen-schema/util/geographical-location.canonical.yaml
@@ -1,16 +1,17 @@
-id: canonical://www.boundedinfinity.com/canonical/util/geographical-location
-description: A Geographical location
-kind: object
-properties:
-    -   name: latitude
-        kind: number
-        description: The Geographical latitude
-        minimum: -90
-        maximum: 90
-        required: true
-    -   name: longitude
-        kind: number
-        description: The Geographical longitude
-        minimum: -90
-        maximum: 90
-        required: true
+kinds:
+    -   id: canonical://www.boundedinfinity.com/canonical/util/geographical-location
+        description: A Geographical location
+        kind: object
+        properties:
+            -   name: latitude
+                kind: number
+                description: The Geographical latitude
+                minimum: -90
+                maximum: 90
+                required: true
+            -   name: longitude
+                kind: number
+                description: The Geographical longitude
+                minimum: -90
+                maximum: 90
+                required: true
